tests/NormalTests/paczka1/fuzzy1/59108990.err
Error in line 5: o2mOaxS S331 36,10
Error in line 3: gvrWifktbFa A309 40,4
Error in line 16: Agpt4fd S331 0,8
Error in line 12: A922 A83 231,2
Error in line 22: o2mOaxS A309 33,1
Error in line 34: m25kBx4rEK A309 48,9
